🧪 TEST: model results

--- a/notebooks/DataPreparation.ipynb
+++ b/notebooks/DataPreparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, classification_report"
+    "from sklearn import metrics"
    ]
   },
   {
@@ -1634,12 +1634,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
-    "accuracy = accuracy_score(y_test, y_pred)\n",
-    "report = classification_report(y_test, y_pred)"
+    "accuracy = metrics.accuracy_score(y_test, y_pred)\n",
+    "report = metrics.classification_report(y_test, y_pred)"
    ]
   },
   {
@@ -1668,6 +1668,46 @@
    "source": [
     "print(f\"Accuracy: {accuracy}\")\n",
     "print(f\"Classification Report:\\n{report}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1])"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(vectorizer.transform([\"انا سعيد جدا\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0])"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(vectorizer.transform([\"الله يقلع ام الهلال خرب ام الدوري\"]))"
    ]
   },
   {
