🧹 UPDATE: load_model impl.

--- a/notebooks/ModelExperimentation.ipynb
+++ b/notebooks/ModelExperimentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>tweet</th><th>label</th></tr><tr><td>str</td><td>i64</td></tr></thead><tbody><tr><td>&quot;لا أحد يستطيع شم أحزانك مهما أ…</td><td>0</td></tr><tr><td>&quot;وفاة الشاب الخلوق محمد أبو شمل…</td><td>0</td></tr><tr><td>&quot;💛💚 باقة 💚💛 ❣❣ أحيوا أمرنا ❣❣ ➖…</td><td>0</td></tr><tr><td>&quot;يجماعة والله حاجة لا تصدق ان ا…</td><td>0</td></tr><tr><td>&quot;#اشراقة_اليوم تغيب الشمس وتشرق…</td><td>0</td></tr></tbody></table></div>"
+       "<small>shape: (5, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>tweet</th><th>label</th></tr><tr><td>str</td><td>i64</td></tr></thead><tbody><tr><td>&quot;وش وضعكم 🐸 ابو دوري صار يتكلم&quot;</td><td>0</td></tr><tr><td>&quot;اشهر وبضعة ايام اعجتني كلمة وب…</td><td>1</td></tr><tr><td>&quot;ايووته 📢📢 الغلا📢📢 تعالوا ياحلو…</td><td>1</td></tr><tr><td>&quot;كفوو ابو سند ✅&quot;</td><td>1</td></tr><tr><td>&quot;صباحك وررد 🌹&quot;</td><td>1</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (5, 2)\n",
@@ -157,16 +157,16 @@
        "│ ---                             ┆ ---   │\n",
        "│ str                             ┆ i64   │\n",
        "╞═════════════════════════════════╪═══════╡\n",
-       "│ لا أحد يستطيع شم أحزانك مهما أ… ┆ 0     │\n",
-       "│ وفاة الشاب الخلوق محمد أبو شمل… ┆ 0     │\n",
-       "│ 💛💚 باقة 💚💛 ❣❣ أحيوا أمرنا   ┆ 0     │\n",
-       "│ ❣❣ ➖…                          ┆       │\n",
-       "│ يجماعة والله حاجة لا تصدق ان ا… ┆ 0     │\n",
-       "│ #اشراقة_اليوم تغيب الشمس وتشرق… ┆ 0     │\n",
+       "│ وش وضعكم 🐸 ابو دوري صار يتكلم  ┆ 0     │\n",
+       "│ اشهر وبضعة ايام اعجتني كلمة وب… ┆ 1     │\n",
+       "│ ايووته 📢📢 الغلا📢📢 تعالوا    ┆ 1     │\n",
+       "│ ياحلو…                          ┆       │\n",
+       "│ كفوو ابو سند ✅                 ┆ 1     │\n",
+       "│ صباحك وررد 🌹                   ┆ 1     │\n",
        "└─────────────────────────────────┴───────┘"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,23 +253,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7795580596883529\n",
+      "Accuracy: 0.786512897262083\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.76      0.80      0.78      5656\n",
-      "           1       0.80      0.75      0.77      5703\n",
+      "           0       0.78      0.80      0.79      5656\n",
+      "           1       0.80      0.77      0.78      5703\n",
       "\n",
-      "    accuracy                           0.78     11359\n",
-      "   macro avg       0.78      0.78      0.78     11359\n",
-      "weighted avg       0.78      0.78      0.78     11359\n",
+      "    accuracy                           0.79     11359\n",
+      "   macro avg       0.79      0.79      0.79     11359\n",
+      "weighted avg       0.79      0.79      0.79     11359\n",
       "\n"
      ]
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -339,17 +339,6 @@
      "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
     }
    ],
    "source": [
@@ -358,20 +347,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "\n",
-    "# with open(\"./models/nb_model.pkl\", \"wb\") as file:\n",
-    "#     pickle.dump(model, file)\n",
+    "with open(\"./models/nb_model.pkl\", \"wb\") as file:\n",
+    "    pickle.dump((vectorizer, tfidf, model), file)\n",
     "\n",
-    "with open(\"./models/vectorizer.pkl\", \"wb\") as file:\n",
-    "    pickle.dump(vectorizer, file)\n",
+    "# with open(\"./models/vectorizer.pkl\", \"wb\") as file:\n",
+    "#     pickle.dump(vectorizer, file)\n",
     "\n",
-    "with open(\"./models/tfidf_transformer.pkl\", \"wb\") as file:\n",
-    "    pickle.dump(tfidf, file)"
+    "# with open(\"./models/tfidf_transformer.pkl\", \"wb\") as file:\n",
+    "#     pickle.dump(tfidf, file)"
    ]
   },
   {
