🔨 ADD: model training scripts

--- a/notebooks/ModelExperimentation.ipynb
+++ b/notebooks/ModelExperimentation.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,13 +281,6 @@
     "# with open(\"./models/tfidf_transformer.pkl\", \"wb\") as file:\n",
     "#     pickle.dump(tfidf, file)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -306,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
