🧪 TEST: add preprocess data test

--- a/notebooks/ModelExperimentation.ipynb
+++ b/notebooks/ModelExperimentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,9 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MLFLOW_TRACKING_URI: /Users/mamdouh_malaa/Developer/others/Faheem/tmp/mlflow\n"
+     ]
+    }
+   ],
    "source": [
     "ROOT_DIR = Path().resolve().parents[0]\n",
     "MODEL_REGISTRY = Path(\"/tmp/mlflow\")\n",
@@ -36,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,9 +135,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'اله يرحمك يا ابتي'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocess_text(\"الله يرحمك يا أبتي\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'اقنع بمن عندك يقنع بك من عندك'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocess_text(\"إقنع بِمن عندك يقنع بِكَ من عنْدك؛\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (5, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>tweet</th><th>label</th></tr><tr><td>str</td><td>i64</td></tr></thead><tbody><tr><td>&quot;الرجال افعال 👍&quot;</td><td>1</td></tr><tr><td>&quot;جاني الإحساس هذا بعد محمد السك…</td><td>1</td></tr><tr><td>&quot;واللي عندو دوام يوم الجمعة من …</td><td>1</td></tr><tr><td>&quot;ما وسعت لهم #حضرموت لفضتهم عشا…</td><td>0</td></tr><tr><td>&quot;ما هو مجتمع اصبح المنافقين فيه…</td><td>0</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (5, 2)\n",
+       "┌─────────────────────────────────┬───────┐\n",
+       "│ tweet                           ┆ label │\n",
+       "│ ---                             ┆ ---   │\n",
+       "│ str                             ┆ i64   │\n",
+       "╞═════════════════════════════════╪═══════╡\n",
+       "│ الرجال افعال 👍                 ┆ 1     │\n",
+       "│ جاني الإحساس هذا بعد محمد السك… ┆ 1     │\n",
+       "│ واللي عندو دوام يوم الجمعة من … ┆ 1     │\n",
+       "│ ما وسعت لهم #حضرموت لفضتهم عشا… ┆ 0     │\n",
+       "│ ما هو مجتمع اصبح المنافقين فيه… ┆ 0     │\n",
+       "└─────────────────────────────────┴───────┘"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_neg = load_data(file_paths[\"train_arabic_negative_tweets\"], 0)\n",
     "train_pos = load_data(file_paths[\"train_arabic_positive_tweets\"], 1)\n",
@@ -145,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,9 +292,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7812307421427943\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.77      0.79      0.78      5656\n",
+      "           1       0.79      0.77      0.78      5703\n",
+      "\n",
+      "    accuracy                           0.78     11359\n",
+      "   macro avg       0.78      0.78      0.78     11359\n",
+      "weighted avg       0.78      0.78      0.78     11359\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "mlflow.set_experiment(\"MultinomialNB Experiment\")\n",
     "\n",
@@ -248,25 +346,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.predict(vectorizer.transform([\"انا سعيد جدا\"]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.predict(vectorizer.transform([\"الله يقلع ام الهلال خرب ام الدوري\"]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
