🧪 TEST: add dataset_test

--- a/notebooks/ModelExperimentation.ipynb
+++ b/notebooks/ModelExperimentation.ipynb
@@ -22,24 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MLFLOW_TRACKING_URI: /Users/mamdouh_malaa/Developer/others/Faheem/tmp/mlflow\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ROOT_DIR = Path().resolve().parents[0]\n",
     "MODEL_REGISTRY = Path(\"/tmp/mlflow\")\n",
     "Path(MODEL_REGISTRY).mkdir(parents=True, exist_ok=True)\n",
     "MLFLOW_TRACKING_URI = str(ROOT_DIR) + str(MODEL_REGISTRY.absolute())\n",
     "mlflow.set_tracking_uri(MLFLOW_TRACKING_URI)\n",
-    "print(f\"MLFLOW_TRACKING_URI: {MLFLOW_TRACKING_URI}\")"
+    "# print(f\"MLFLOW_TRACKING_URI: {MLFLOW_TRACKING_URI}\")"
    ]
   },
   {
@@ -58,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,46 +127,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'اله يرحمك يا ابتي'"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "preprocess_text(\"الله يرحمك يا أبتي\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'اقنع بمن عندك يقنع بك من عندك'"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "preprocess_text(\"إقنع بِمن عندك يقنع بِكَ من عنْدك؛\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -188,7 +140,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>tweet</th><th>label</th></tr><tr><td>str</td><td>i64</td></tr></thead><tbody><tr><td>&quot;الرجال افعال 👍&quot;</td><td>1</td></tr><tr><td>&quot;جاني الإحساس هذا بعد محمد السك…</td><td>1</td></tr><tr><td>&quot;واللي عندو دوام يوم الجمعة من …</td><td>1</td></tr><tr><td>&quot;ما وسعت لهم #حضرموت لفضتهم عشا…</td><td>0</td></tr><tr><td>&quot;ما هو مجتمع اصبح المنافقين فيه…</td><td>0</td></tr></tbody></table></div>"
+       "<small>shape: (5, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>tweet</th><th>label</th></tr><tr><td>str</td><td>i64</td></tr></thead><tbody><tr><td>&quot;كل الي تمنينه يا فلانه ان في ش…</td><td>1</td></tr><tr><td>&quot;رحمة الله الواسعة عليه ربي يجع…</td><td>1</td></tr><tr><td>&quot;فيها كرت أصفر ثاني .. بعد اصاب…</td><td>1</td></tr><tr><td>&quot;تلاتين سنة بترقص .. الليلة رقص…</td><td>0</td></tr><tr><td>&quot;تموتت 😭💔💔 اللي حابه تسوي اضاءة…</td><td>1</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (5, 2)\n",
@@ -197,11 +149,12 @@
        "│ ---                             ┆ ---   │\n",
        "│ str                             ┆ i64   │\n",
        "╞═════════════════════════════════╪═══════╡\n",
-       "│ الرجال افعال 👍                 ┆ 1     │\n",
-       "│ جاني الإحساس هذا بعد محمد السك… ┆ 1     │\n",
-       "│ واللي عندو دوام يوم الجمعة من … ┆ 1     │\n",
-       "│ ما وسعت لهم #حضرموت لفضتهم عشا… ┆ 0     │\n",
-       "│ ما هو مجتمع اصبح المنافقين فيه… ┆ 0     │\n",
+       "│ كل الي تمنينه يا فلانه ان في ش… ┆ 1     │\n",
+       "│ رحمة الله الواسعة عليه ربي يجع… ┆ 1     │\n",
+       "│ فيها كرت أصفر ثاني .. بعد اصاب… ┆ 1     │\n",
+       "│ تلاتين سنة بترقص .. الليلة رقص… ┆ 0     │\n",
+       "│ تموتت 😭💔💔 اللي حابه تسوي     ┆ 1     │\n",
+       "│ اضاءة…                          ┆       │\n",
        "└─────────────────────────────────┴───────┘"
       ]
      },
@@ -236,6 +189,41 @@
     "        .alias(\"cleaned_tweet\")\n",
     "    ]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (2,)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>label</th></tr><tr><td>u32</td></tr></thead><tbody><tr><td>28513</td></tr><tr><td>28282</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (2,)\n",
+       "Series: 'label' [u32]\n",
+       "[\n",
+       "\t28513\n",
+       "\t28282\n",
+       "]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"label\"].unique_counts()"
    ]
   },
   {
@@ -299,12 +287,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7812307421427943\n",
+      "Accuracy: 0.7823752090853068\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.77      0.79      0.78      5656\n",
-      "           1       0.79      0.77      0.78      5703\n",
+      "           0       0.77      0.80      0.79      5656\n",
+      "           1       0.80      0.76      0.78      5703\n",
       "\n",
       "    accuracy                           0.78     11359\n",
       "   macro avg       0.78      0.78      0.78     11359\n",
