🧪 TEST: add behavioral testing for the model

--- a/notebooks/ModelExperimentation.ipynb
+++ b/notebooks/ModelExperimentation.ipynb
@@ -334,27 +334,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.predict(vectorizer.transform([\"انا سعيد جدا\"]))"
+    "def get_proper_format(text: str):\n",
+    "    text = preprocess_text(text)\n",
+    "    vectorized_text = vectorizer.transform([text])\n",
+    "    transformed_text = tfidf.transform(vectorized_text)\n",
+    "    return transformed_text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -363,13 +356,64 @@
        "array([0])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.predict(vectorizer.transform([\"الله يقلع ام الهلال خرب ام الدوري\"]))"
+    "model.predict(get_proper_format(\"ولان بعض الحال يصعب شرحه اثرت صمتا والسكوت مرير\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(get_proper_format(\"الله يقلع ام الهلال خرب ام الدوري\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1])"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "model.predict(get_proper_format(\"انست بوحدتي ولزمت بيتي فطاب الانس لي وصفا السرور\"))"
    ]
   },
   {
